Move containerWrap for Publisher page, fix name for weird cases, label more things

--- a/comixology2/comixology.css
+++ b/comixology2/comixology.css
@@ -855,6 +855,8 @@ footer a{
     font-size: 14px;
     text-overflow: ellipsis;
     white-space: nowrap;
+    margin-bottom: 2px;
+    margin-top: 3px;
 }
 
 .list-container:not(#recommendations) .list-title:hover,.list-actions>li a:hover{
